[package]
name = "feo"
version = "0.1.0"
authors = ["Alex Hixon <alex@alexhixon.com>"]

[dependencies]
bitflags = "0.8"
spin = "0.4.5"
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins", features = ["mem"] }

rk3399-tools = { version="0.1.0", path = "../rk3399-tools/" }
rockchip = { version="0.1.0", path = "./deps/rockchip/" }